exc01: generate the root node.

--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -1,10 +1,11 @@
 <body>
-  <div id="root"></div>
   <script type="module">
+    const root = document.createElement('div')
+    root.id = 'root'
+    document.body.appendChild(root)
     const div = document.createElement('div')
     div.textContent = 'Hello World'
     div.classList.add('container')
-    const root = document.getElementById('root')
     root.appendChild(div)
   </script>
 </body>
